// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApiForm /> should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
    class="relative"
  >
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`<ApiForm /> when the response is loading should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
    class="relative"
  >
    <div
      class="form-loading-overlay absolute grid h-full place-content-center w-full"
    >
      <div
        class="inline-block text-center"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-gear animate-spin motion-reduce:animate-none h-10 w-10"
          data-icon="gear"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M481.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-30.9 28.1c-7.7 7.1-11.4 17.5-10.9 27.9c.1 2.9 .2 5.8 .2 8.8s-.1 5.9-.2 8.8c-.5 10.5 3.1 20.9 10.9 27.9l30.9 28.1c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-39.7-12.6c-10-3.2-20.8-1.1-29.7 4.6c-4.9 3.1-9.9 6.1-15.1 8.7c-9.3 4.8-16.5 13.2-18.8 23.4l-8.9 40.7c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-8.9-40.7c-2.2-10.2-9.5-18.6-18.8-23.4c-5.2-2.7-10.2-5.6-15.1-8.7c-8.8-5.7-19.7-7.8-29.7-4.6L69.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l30.9-28.1c7.7-7.1 11.4-17.5 10.9-27.9c-.1-2.9-.2-5.8-.2-8.8s.1-5.9 .2-8.8c.5-10.5-3.1-20.9-10.9-27.9L8.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l39.7 12.6c10 3.2 20.8 1.1 29.7-4.6c4.9-3.1 9.9-6.1 15.1-8.7c9.3-4.8 16.5-13.2 18.8-23.4l8.9-40.7c2-9.1 9-16.3 18.2-17.8C213.3 1.2 227.5 0 242 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l8.9 40.7c2.2 10.2 9.4 18.6 18.8 23.4c5.2 2.7 10.2 5.6 15.1 8.7c8.8 5.7 19.7 7.7 29.7 4.6l39.7-12.6c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM242 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"
            fill="currentColor"
          />
        </svg>
        <br />
        Loading...
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`<ApiForm /> when the response is loading with loading configuration should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
    class="relative"
  >
    <div
      class="form-loading-overlay absolute grid h-full place-content-center w-full"
    >
      <div
        class="inline-block text-center"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-radiation animate-pulse motion-reduce:animate-none h-10 w-10"
          data-icon="radiation"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M215 186.7c-23.9 13.8-40 39.7-40 69.3L31 256c-17.7 0-32.2-14.4-30-31.9C9.7 154 46.8 92.7 100.3 52c14.1-10.7 33.8-5.3 42.7 10l72 124.7zM255 336c14.6 0 28.2-3.9 40-10.7l72 124.8c8.8 15.3 3.7 35.1-12.6 41.9c-30.6 12.9-64.2 20-99.4 20s-68.9-7.1-99.4-20c-16.3-6.9-21.4-26.6-12.6-41.9l72-124.8c11.8 6.8 25.4 10.7 40 10.7zm224-80l-144 0c0-29.6-16.1-55.5-40-69.3L367 62c8.8-15.3 28.6-20.7 42.7-10c53.6 40.7 90.6 102 99.4 172.1c2.2 17.5-12.4 31.9-30 31.9zM257 208a48 48 0 1 1 -2 96 48 48 0 1 1 2-96z"
            fill="currentColor"
          />
        </svg>
        <br />
        Activating Reactor...
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`<ApiForm /> with className: value should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
    class="custom-form relative"
  >
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`<ApiForm /> with form fields should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
    class="relative"
  >
    <label>
      Launch Site
      <div
        class="form-field"
      >
        <label
          class="form-label"
          for="launch_site"
        >
          Launch Site
        </label>
        <input
          class="form-input"
          id="launch_site"
          name="launchSite"
          type="text"
          value=""
        />
      </div>
    </label>
    <label>
      Mission Name
      <div
        class="form-field"
      >
        <label
          class="form-label"
          for="mission_name"
        >
          Mission Name
        </label>
        <input
          class="form-input"
          id="mission_name"
          name="mission.name"
          type="text"
          value=""
        />
      </div>
    </label>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`<ApiForm /> with form fields when the user submits the form when the request returns a response with API errors should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
    class="relative"
  >
    <label>
      Launch Site
      <div
        class="form-field"
      >
        <label
          class="form-label"
          for="launch_site"
        >
          Launch Site
        </label>
        <input
          class="form-input"
          id="launch_site"
          name="launchSite"
          type="text"
          value=""
        />
        <span
          class="form-field-errors"
        >
          can't be blank
        </span>
      </div>
    </label>
    <label>
      Mission Name
      <div
        class="form-field"
      >
        <label
          class="form-label"
          for="mission_name"
        >
          Mission Name
        </label>
        <input
          class="form-input"
          id="mission_name"
          name="mission.name"
          type="text"
          value=""
        />
      </div>
    </label>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
